modest improvements with include_cache

--- a/_includes/site/layout/base/footer.html
+++ b/_includes/site/layout/base/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="right-panel col-sm-8 col-sm-push-4">
         <div class="row">
-          {% include site/layout/base/footer/links.html %}
+          {% include_cached site/layout/base/footer/links.html %}
         </div>
       </div>
       <div class="left-panel col-sm-4 col-sm-pull-8">
