--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,7 +27,7 @@
   {% include_cached site/layout/base/stylesheets.html %}
 </head>
 <body>
-  {% include site/layout/base/nav.html %}
+  {% include_cached site/layout/base/nav.html %}
 
   {{ content }}
 
