--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
   <div class="col-md-3">
-    {% include site/layout/releases/version_nav.html %}
+    {% include_cached site/layout/releases/version_nav.html %}
   </div>
   <div class="col-md-9">
     {{ content }}
