--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-{% include_cached site/layout/docs/tabs.html %}
+{% include site/layout/docs/tabs.html %}
 
 <div class="row">
   {% unless page.hide.left_sidebar %}
     <div class="col-md-2">
-        {% include_cached site/layout/docs/category_nav.html %}
+        {% include site/layout/docs/category_nav.html %}
     </div>
   {% endunless %}
 
