--- a/_includes/site/layout/base/nav.html
+++ b/_includes/site/layout/base/nav.html
@@ -28,7 +28,7 @@
         <li><a href="{{ site.baseurl }}/community/">Community</a></li>
         <li><a href="{{ site.baseurl }}/releases/">Releases</a></li>
         <li><a href="{{ site.baseurl }}/news/">News</a></li>
-        <li><a href="{{ site.baseurl }}/contact-us/">Contact Us</a></li>
+        <li><a href="{% link _docs/latest/use/index.md %}">Contact Us</a></li>
       </ul>
     </div>
   </div>
