--- a/google/cloud/forseti/common/email_templates/inventory_summary.jinja
+++ b/google/cloud/forseti/common/email_templates/inventory_summary.jinja
@@ -19,6 +19,7 @@ limitations under the License.
 <body>
     Inventory Index Id: {{ inventory_index_id }}<br>
     Inventory Timestamp: {{ timestamp }}<br>
+    Root Resources: {{ root_resources }}<br>
 
     <a href="https://forsetisecurity.org/docs/latest/configure/inventory/gsuite.html">
     G Suite Domain-wide Delegation:</a>
